--- a/final-project-ui/src/Components/DashboardPage/Dashboard.module.css
+++ b/final-project-ui/src/Components/DashboardPage/Dashboard.module.css
@@ -1,13 +1,15 @@
-.title > div {
+/* .title > div {
     padding-left: 1%;
-}
-
-h1{
+} */
+.title{
     color: rgb(58, 81, 123);
+}
+h1{
+    /* color: rgb(58, 81, 123); */
 }
 
 @media (max-width: 768px) {
-    h1{
+    .title{
         font-size: 1.25rem;
     }
 
